--- a/.github/workflows/emailservice.yml
+++ b/.github/workflows/emailservice.yml
@@ -1,25 +1,25 @@
-name: Build and Push Docker Image
+name: Build and Push EmailService Image
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Clonar repo
+        uses: actions/checkout@v2
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Configurar Docker
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}tomasbeltran/egi_cloud:tagname .
+      - name: Construir imagen emailservice
+        run: docker build -t tomasbeltran/egi_cloud:latest
 
-      - name: Push image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}tomasbeltran/egi_cloud:tagname
+      - name: Login a Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Subir imagen a Docker Hub
+        run: docker push tomasbeltran/egi_cloud:latest
