--- a/.github/workflows/emailservice.yml
+++ b/.github/workflows/emailservice.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Construir imagen emailservice
-        run: docker build -t tomasbeltran/egi_cloud:latest
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/emailservice:latest .
 
       - name: Login a Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
